--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -78,16 +78,8 @@ job-centos7-ninja-gcc-package:
     CXX: g++
   extends: .job-linux-desktop
   script:
-    - cmake --version
-    - export CC=$CC
-    - export CXX=$CXX
-    - mkdir -p build/OUTPUT
-    - echo $CMAKE_GENERATOR
-    - echo $DEFAULT_LINUX_CMAKE_OPTIONS
-    - echo $CMAKE_SANITIZER_OPTIONS
-    - cd build
-    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+    - gpg2 --pinentry-mode loopback --passphrase $GPG_SIGNING_PASS --import "$GPG_SIGNING_KEY"
+    - *build_all_linux_script
   artifacts:
     paths:
       - build/OUTPUT/Packages/*.AppImage
