Avoid overwritting packages that have the same name on snapshots (and so, the code doesn't change)[ci skip]

--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -95,7 +95,7 @@ job-centos7-ninja-gcc-deploy:
        - $NIGHTLY_MASTER
        - $DEPLOY_LINUX
   script:
-    - scp build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
+    - rsync -rlv --ignore-existing build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
     
 #################################################
 # Debug
