--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -152,7 +152,7 @@ job-windows-vs2017-win32-upload:
   dependencies:
     - job-windows-vs2017-package
   script:
-    - scp "results/*.exe" "%DEPLOY_SERVER%:%DEPLOY_SNAPSHOTS_ROOT_DIRECTORY%/windows/app"
+    - c:\MinGW\msys\1.0\bin\rsync -rlv --ignore-existing "results/*.exe" "%DEPLOY_SERVER%:%DEPLOY_SNAPSHOTS_ROOT_DIRECTORY%/windows/app"
 
 
 
