Add code signing support for Linux and Windows - Add Signing info in CI : use Key for Linux, folder for Windows - Update create appimage for takking account of key - Use appimagetool in addition of linuxdeploy for code signing step if needed

--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -1,3 +1,4 @@
+
 #job-centos7-makefile-gcc:
 
 #  tags: [ "docker" ]
@@ -71,11 +72,26 @@ job-centos7-ninja-gcc-package:
        - $NIGHTLY_MASTER
        - $DEPLOY_LINUX
   variables:
-    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_BUILDER_SIGNING_IDENTITY=$GPG_SIGNING_KEYID -DLINPHONE_BUILDER_SIGNING_PASSPHRASE=$GPG_SIGNING_PASS
     CMAKE_GENERATOR: Ninja
     CC: gcc
     CXX: g++
   extends: .job-linux-desktop
+  script:
+    - echo "$GPG_SIGNING_PUB" > file.key && sed -i 's/\r /\n/g' file.key && chmod 600 file.key
+    - gpg --import file.key
+    - echo "$GPG_SIGNING_KEY" > file.key && sed -i 's/\r /\n/g' file.key && chmod 600 file.key
+    - gpg --import file.key
+    - cmake --version
+    - export CC=$CC
+    - export CXX=$CXX
+    - mkdir -p build/OUTPUT
+    - echo $CMAKE_GENERATOR
+    - echo $DEFAULT_LINUX_CMAKE_OPTIONS
+    - echo $CMAKE_SANITIZER_OPTIONS
+    - cd build
+    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
   artifacts:
     paths:
       - build/OUTPUT/Packages/*.AppImage
@@ -101,9 +117,21 @@ job-centos7-ninja-gcc-deploy:
 # Debug
 #################################################
 
-job-centos7-debug:
+job-centos7-debug-nuc:
   stage: deploy
   tags: [ "docker-test-centos7-liblinphone-nuc" ]
+  #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-centos7-qt-fuse-wget:5.12.5
+  dependencies: []
+  only:
+    variables:
+      - $DEBUG_CENTOS7_NUC
+  script:
+    - sleep 10m
+
+job-centos7-debug:
+  stage: deploy
+  tags: [ "docker" ]
   #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
   image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-centos7-qt-fuse-wget:5.12.5
   dependencies: []
