--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -69,8 +69,7 @@ job-centos7-ninja-gcc-package:
   dependencies: []
   only:
      variables:
-       - $NIGHTLY_MASTER
-       - $DEPLOY_LINUX
+       - $DEPLOY_LINUX_CENTOS7
   variables:
     CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_BUILDER_SIGNING_IDENTITY=$GPG_SIGNING_KEYID -DLINPHONE_BUILDER_SIGNING_PASSPHRASE=$GPG_SIGNING_PASS
     CMAKE_GENERATOR: Ninja
@@ -108,8 +107,7 @@ job-centos7-ninja-gcc-deploy:
     - job-centos7-ninja-gcc-package
   only:
      variables:
-       - $NIGHTLY_MASTER
-       - $DEPLOY_LINUX
+       - $DEPLOY_LINUX_CENTOS7
   script:
     - rsync -rlv --ignore-existing build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
     
