--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -86,33 +86,71 @@ job-debian9-makefile-clang:
 # Package - Nightly
 #################################################
 
-#job-debian9-makefile-clang-package:
-#  stage: package
-#  tags: [ "docker-debian9" ]
-#  only:
-#     variables:
-#       - $NIGHTLY_MASTER
-#       - $DEPLOY_LINUX
-#  variables:
-#    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
-#  extends: job-debian9-makefile-clang
-#  artifacts:
-#    paths:
-#      - build/OUTPUT/Packages/Linphone*.AppImage
-#    expire_in: 1 week
-#
+job-debian9-makefile-clang-package:
+  stage: package
+  tags: [ "docker-debian9" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  dependencies: []
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  variables:
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_BUILDER_SIGNING_IDENTITY=$GPG_SIGNING_KEYID -DLINPHONE_BUILDER_SIGNING_PASSPHRASE=$GPG_SIGNING_PASS
+    CMAKE_GENERATOR: Unix Makefiles
+    CC: clang
+    CXX: clang++
+  extends: .job-linux-desktop
+  script:
+    - echo "$GPG_SIGNING_PUB" > file.key && sed -i 's/\r /\n/g' file.key && chmod 600 file.key
+    - gpg --import file.key
+    - echo "$GPG_SIGNING_KEY" > file.key && sed -i 's/\r /\n/g' file.key && chmod 600 file.key
+    - gpg --import file.key
+    - cmake --version
+    - export CC=$CC
+    - export CXX=$CXX
+    - mkdir -p build/OUTPUT
+    - echo $CMAKE_GENERATOR
+    - echo $DEFAULT_LINUX_CMAKE_OPTIONS
+    - echo $CMAKE_SANITIZER_OPTIONS
+    - cd build
+    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+  artifacts:
+    paths:
+      - build/OUTPUT/Packages/*.AppImage
+    expire_in: 1 week
+    
+
 #################################################
 # Deploy - Nightly
 #################################################
 
-#job-debian9-makefile-clang-deploy:
-#  stage: deploy
-#  tags: [ "docker-debian9" ]
-#  dependencies:
-#    - job-debian9-makefile-clang-package
-#  only:
-#     variables:
-#       - $NIGHTLY_MASTER
-#       - $DEPLOY_LINUX
-#  script:
-#    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
+job-debian9-makefile-clang-deploy:
+  stage: deploy
+  tags: [ "docker-debian9" ]
+  dependencies:
+    - job-debian9-makefile-clang-package
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  script:
+    - rsync -rlv --ignore-existing build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/    
+    
+#################################################
+# Debug
+#################################################
+
+
+job-debian9-debug:
+  stage: deploy
+  tags: [ "docker-debian9" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  dependencies: []
+  only:
+    variables:
+      - $DEBUG_DEBIAN9
+  script:
+    - sleep 10m
+
