Use deploy runner to deploy appimage [ci skip]

--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -130,7 +130,7 @@ job-debian9-makefile-clang-package:
 
 job-debian9-makefile-clang-deploy:
   stage: deploy
-  tags: [ "docker-test-debian9-liblinphone-nuc" ]
+  tags: [ "deploy" ]
   dependencies:
     - job-debian9-makefile-clang-package
   only:
