- Change mediastreamer plugins path for Linux and Windows to `plugins/mediastreamer`

--- a/linphone-app/CMakeLists.txt
+++ b/linphone-app/CMakeLists.txt
@@ -328,12 +328,12 @@ if(ENABLE_BUILD_VERBOSE)#useful to copy these Paths to QML previewers
 endif()
 if(APPLE)
     if(MS2_PLUGINS_LOCATION)
-    set(MSPLUGINS_DIR ${MS2_PLUGINS_LOCATION})
+        set(MSPLUGINS_DIR ${MS2_PLUGINS_LOCATION})
     else()
-    set(MSPLUGINS_DIR "Frameworks/mediastreamer2.framework/Versions/A/Libraries")
+        set(MSPLUGINS_DIR "Frameworks/mediastreamer2.framework/Versions/A/Libraries")
     endif()
 else()
-    set(MSPLUGINS_DIR "${CMAKE_INSTALL_LIBDIR}/mediastreamer/plugins")
+    set(MSPLUGINS_DIR "plugins/mediastreamer")
 endif()
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/src/config.h.cmake" "${CMAKE_CURRENT_BINARY_DIR}/config.h")
 # ------------------------------------------------------------------------------
