--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -2,7 +2,7 @@
 
 job-debian9-ninja-gcc:
   tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt:5.12.5
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   except:
     refs:
       - schedules
@@ -28,7 +28,7 @@ job-debian9-ninja-gcc-smallsdk:
 
 job-debian9-makefile-gcc:
   tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt:5.12.5
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -53,7 +53,7 @@ job-debian9-ninja-clang:
   only:
     variables:
       - $NIGHTLY_MASTER
-  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt:5.12.5
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   variables:
     CMAKE_OPTIONS: -DENABLE_DOC=ON
     CMAKE_GENERATOR: Ninja
@@ -71,7 +71,7 @@ job-debian9-ninja-clang-novideo:
   
 job-debian9-makefile-clang:
   tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt:5.12.5
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -89,7 +89,7 @@ job-debian9-makefile-clang:
 job-debian9-makefile-clang-package:
   stage: package
   tags: [ "docker-test-debian9-liblinphone-nuc" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt:5.12.5
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   dependencies: []
   only:
      variables:
@@ -112,12 +112,13 @@ job-debian9-makefile-clang-package:
     - export CC=$CC
     - export CXX=$CXX
     - mkdir -p build/OUTPUT
+    - echo $CI_BUILD_TYPE
     - echo $CMAKE_GENERATOR
     - echo $DEFAULT_LINUX_CMAKE_OPTIONS
     - echo $CMAKE_SANITIZER_OPTIONS
     - cd build
-    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_BUILD_TYPE=$CI_BUILD_TYPE $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+    - cmake --build . --target all --config $CI_BUILD_TYPE $LBC_NODEBUG_OPTIONS
   artifacts:
     paths:
       - build/OUTPUT/Packages/*.AppImage
@@ -148,7 +149,7 @@ job-debian9-makefile-clang-deploy:
 job-debian9-debug:
   stage: deploy
   tags: [ "docker-test-debian9-liblinphone-nuc" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt:5.12.5
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   dependencies: []
   only:
     variables:
