--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -72,8 +72,7 @@ job-centos7-ninja-gcc-package:
   dependencies: []
   only:
      variables:
-       - $NIGHTLY_MASTER
-       - $DEPLOY_LINUX
+       - $DEPLOY_LINUX_CENTOS7
   variables:
     CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_BUILDER_SIGNING_IDENTITY=$GPG_SIGNING_KEYID -DLINPHONE_BUILDER_SIGNING_PASSPHRASE=$GPG_SIGNING_PASS
     CMAKE_GENERATOR: Ninja
@@ -91,12 +90,13 @@ job-centos7-ninja-gcc-package:
     - export CC=$CC
     - export CXX=$CXX
     - mkdir -p build/OUTPUT
+    - echo $CI_BUILD_TYPE
     - echo $CMAKE_GENERATOR
     - echo $DEFAULT_LINUX_CMAKE_OPTIONS
     - echo $CMAKE_SANITIZER_OPTIONS
     - cd build
-    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_BUILD_TYPE=$CI_BUILD_TYPE $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+    - cmake --build . --target all --config $CI_BUILD_TYPE $LBC_NODEBUG_OPTIONS
   artifacts:
     paths:
       - build/OUTPUT/Packages/*.AppImage
@@ -113,8 +113,7 @@ job-centos7-ninja-gcc-deploy:
     - job-centos7-ninja-gcc-package
   only:
      variables:
-       - $NIGHTLY_MASTER
-       - $DEPLOY_LINUX
+       - $DEPLOY_LINUX_CENTOS7
   script:
     - rsync -rlv --ignore-existing build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
     
