--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -2,7 +2,7 @@
 
 job-debian9-ninja-gcc:
   tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   except:
     refs:
       - schedules
@@ -28,7 +28,7 @@ job-debian9-ninja-gcc-smallsdk:
 
 job-debian9-makefile-gcc:
   tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -53,7 +53,7 @@ job-debian9-ninja-clang:
   only:
     variables:
       - $NIGHTLY_MASTER
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   variables:
     CMAKE_OPTIONS: -DENABLE_DOC=ON
     CMAKE_GENERATOR: Ninja
@@ -71,7 +71,7 @@ job-debian9-ninja-clang-novideo:
   
 job-debian9-makefile-clang:
   tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -86,33 +86,74 @@ job-debian9-makefile-clang:
 # Package - Nightly
 #################################################
 
-#job-debian9-makefile-clang-package:
-#  stage: package
-#  tags: [ "docker-debian9" ]
-#  only:
-#     variables:
-#       - $NIGHTLY_MASTER
-#       - $DEPLOY_LINUX
-#  variables:
-#    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
-#  extends: job-debian9-makefile-clang
-#  artifacts:
-#    paths:
-#      - build/OUTPUT/Packages/Linphone*.AppImage
-#    expire_in: 1 week
-#
+job-debian9-makefile-clang-package:
+  stage: package
+  tags: [ "docker-test-debian9-liblinphone-nuc" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
+  dependencies: []
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  variables:
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_BUILDER_SIGNING_IDENTITY=$GPG_SIGNING_KEYID -DLINPHONE_BUILDER_SIGNING_PASSPHRASE=$GPG_SIGNING_PASS
+    CMAKE_GENERATOR: Unix Makefiles
+    CC: clang
+    CXX: clang++
+  extends: .job-linux-desktop
+  script:
+    - echo "$GPG_SIGNING_PUB" > file.key && sed -i 's/\r /\n/g' file.key && chmod 600 file.key
+    - gpg --import file.key
+    - rm -f file.key
+    - echo "$GPG_SIGNING_KEY" > file.key && sed -i 's/\r /\n/g' file.key && chmod 600 file.key
+    - base64 -w 0 file.key | base64 -d | gpg --import --no-tty --batch --yes
+    - rm -f file.key
+    - cmake --version
+    - export CC=$CC
+    - export CXX=$CXX
+    - mkdir -p build/OUTPUT
+    - echo $CI_BUILD_TYPE
+    - echo $CMAKE_GENERATOR
+    - echo $DEFAULT_LINUX_CMAKE_OPTIONS
+    - echo $CMAKE_SANITIZER_OPTIONS
+    - cd build
+    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_BUILD_TYPE=$CI_BUILD_TYPE $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+    - cmake --build . --target all --config $CI_BUILD_TYPE $LBC_NODEBUG_OPTIONS
+  artifacts:
+    paths:
+      - build/OUTPUT/Packages/*.AppImage
+    expire_in: 1 week
+    
+
 #################################################
 # Deploy - Nightly
 #################################################
 
-#job-debian9-makefile-clang-deploy:
-#  stage: deploy
-#  tags: [ "docker-debian9" ]
-#  dependencies:
-#    - job-debian9-makefile-clang-package
-#  only:
-#     variables:
-#       - $NIGHTLY_MASTER
-#       - $DEPLOY_LINUX
-#  script:
-#    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
+job-debian9-makefile-clang-deploy:
+  stage: deploy
+  tags: [ "deploy" ]
+  dependencies:
+    - job-debian9-makefile-clang-package
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  script:
+    - rsync -rlv --ignore-existing build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/    
+    
+#################################################
+# Debug
+#################################################
+
+
+job-debian9-debug:
+  stage: deploy
+  tags: [ "docker-test-debian9-liblinphone-nuc" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-debian9-fuse-wget-gpg2-qt-release-no-debug-info:5.12.5
+  dependencies: []
+  only:
+    variables:
+      - $DEBUG_DEBIAN9
+  script:
+    - sleep 10m
+
