Update minimum cmake version to 3.9 for qt5_add_big_resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@
 #
 ################################################################################
 
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.9)
+#3.9 for qt5_add_big_resources
 
 get_cmake_property(vars CACHE_VARIABLES)
 foreach(var ${vars})
