--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ variables:
 include:
   - '.gitlab-ci-files/job-linux-prepare.yml'
   - '.gitlab-ci-files/job-linux-desktop.yml'
-  - '.gitlab-ci-files/job-linux-desktop-debian8.yml'
+  #- '.gitlab-ci-files/job-linux-desktop-debian8.yml'   #Removed as there is 5.10 and not at least 5.12
   - '.gitlab-ci-files/job-linux-desktop-debian9.yml'
 ##  - '.gitlab-ci-files/job-linux-desktop-debian10.yml'
   - '.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml'
