Fix upload directory in CI [ci skip]

--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -139,7 +139,7 @@ job-debian9-makefile-clang-deploy:
        - $NIGHTLY_MASTER
        - $DEPLOY_LINUX
   script:
-    - rsync -rlv --ignore-existing build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:$APPIMAGE_DEPLOY_SNAPSHOTS_PATH/    
+    - rsync -rlv --ignore-existing build/OUTPUT/Packages/*.AppImage $DEPLOY_SERVER:APPIMAGE_UPLOAD_DIRECTORY/    
     
 #################################################
 # Debug
